Fixes z-index bug

--- a/_sass/_components.creation.scss
+++ b/_sass/_components.creation.scss
@@ -19,6 +19,10 @@
         background-size: cover;
         min-height: 100%;
 
+        > * {
+            position: relative;
+        }
+
         .c-creation--sabbath & {
             background: none !important;
         }
@@ -26,12 +30,13 @@
         .c-creation--darken-bg &::before {
             content: "";
             position: absolute;
+            z-index: 0;
             display: block;
             top: 0;
             right: 0;
             bottom: 0;
             left: 0;
-            background-color: rgba($c-black, .4);
+            background-color: rgba($c-black, 0.4);
         }
     }
 
